styles: img alignment fixed

--- a/plates.css
+++ b/plates.css
@@ -8,6 +8,8 @@ img {
     width: 350px;
     height: auto;
     border-radius: 15px;
+    display: block;
+    margin: 0;
 }
 
 .desc {
